<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#365ca1"

    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/btn_help"
        android:drawableTop="@drawable/ic_live_help_white_24dp"
        android:textStyle="bold"
        android:background="@drawable/btn_shape"
        android:textColor="#fff"
        android:padding="5dp"
        android:layout_margin="5dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/btn_setting"
        android:drawableTop="@drawable/ic_settings_applications_white_24dp"
        android:textStyle="bold"
        android:background="@drawable/btn_shape"
        android:textColor="#fff"
        android:padding="5dp"
        android:layout_margin="5dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/btn_share"
        android:drawableTop="@drawable/ic_share_white_24dp"
        android:textStyle="bold"
        android:background="@drawable/btn_shape"
        android:textColor="#fff"
        android:padding="5dp"
        android:layout_margin="5dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/btn_about"
        android:drawableTop="@drawable/ic_contacts_white_24dp"
        android:textStyle="bold"
        android:background="@drawable/btn_shape"
        android:textColor="#fff"
        android:padding="5dp"
        android:layout_margin="5dp"

        />


</LinearLayout>
